new adaptive with large text

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </div>
 <header class="header">
     <div class="center_div">
-       <a href="#" class="logo"><h4> Lab402</h4></a>
+        <a href="#" class="logo"><h4> Lab402</h4></a>
         <input class="side-menu" type="checkbox" id="side-menu"/>
         <label class="hamb" for="side-menu">
             <span class="hamb-line"></span>
@@ -34,25 +34,34 @@
     <div class="black">
         <div class="content">
             <div class="company-info">
+                <div>
                 <h1>ЛАБОРАТОРИЯ 402</h1>
                 <p>Небольшой текст предисловие, кто мы такие, наша цель, слоган и тому подобное</p>
-                <div>
-                <p>
-                    г.Минск, ул. Платонова, 39<br/>
-                    БГУИР, 5 корпус, каб. 402<br/>
-                    ПН-ПТ: 9:00-22:00<br/>
-                    CБ: 9:00-16:00
-                    lab402.bsuir@gmail.com
-                </p>
+                </div>
+                <div class="top_contacts">
+                    <div class="top_contact">
+                        <p>
+                            г.Минск, ул. Платонова, 39<br/>
+                            БГУИР, 5 корпус, каб. 402</p>
+                    </div>
+                    <div class="top_contact">
+                        <p> ПН-ПТ: 9:00-22:00<br/>
+                            CБ: 9:00-16:00
+                        </p>
+                    </div>
+                    <div class="top_contact"><p>
+                        lab402.bsuir@gmail.com
+                    </div>
+                    </p>
                 </div>
             </div>
             <div class="form" id="form">
                 <div class="form-header">
                     <h3>
-                        Напиши нам прямо сейчас
+                        Свяжись с нами
                     </h3>
                 </div>
-                <form id="contact-form" novalidate  autocomplete="off">
+                <form id="contact-form" novalidate autocomplete="off">
                     <div class="inputGroup">
                         <input type="text" id="name" name="name" required autocomplete="off">
                         <label for="name">Имя</label>
@@ -60,13 +69,13 @@
 
                     <div class="inputGroup">
                         <input type="email" id="email" name="email" required autocomplete="off">
-                         <label for="email">Email</label>
+                        <label for="email">Email</label>
                     </div>
 
                     <div class="inputGroup">
                         <textarea id="message" name="message" rows="5" required
                                   autocomplete="off"></textarea>
-                       <label for="message">Сообщение</label>
+                        <label for="message">Сообщение</label>
                     </div>
 
                     <button type="submit" class="submit_button" id="submit_button">Отправить</button>
@@ -111,23 +120,23 @@
             <a href="#" class="logo">Lab402</a>
         </h4>
     </div>
-<!--    <hr/>-->
-<!--    <div class="f_item">-->
-<!--        <h4>АДРЕС</h4>-->
-<!--        <p>-->
-<!--            г.Минск, ул. Платонова, 39<br/>-->
-<!--            БГУИР, 5 корпус, каб. 402-->
-<!--        </p>-->
-<!--    </div>-->
-<!--    <hr/>-->
-<!--    <div class="f_item">-->
-<!--        <h4>ВРЕМЯ РАБОТЫ</h4>-->
-<!--        <p>-->
-<!--            ПН-ПТ: 9:00-22:00<br/>-->
-<!--            CБ: 9:00-16:00-->
-<!--        </p>-->
-<!--    </div>-->
-<!--    <hr/>-->
+    <!--    <hr/>-->
+    <!--    <div class="f_item">-->
+    <!--        <h4>АДРЕС</h4>-->
+    <!--        <p>-->
+    <!--            г.Минск, ул. Платонова, 39<br/>-->
+    <!--            БГУИР, 5 корпус, каб. 402-->
+    <!--        </p>-->
+    <!--    </div>-->
+    <!--    <hr/>-->
+    <!--    <div class="f_item">-->
+    <!--        <h4>ВРЕМЯ РАБОТЫ</h4>-->
+    <!--        <p>-->
+    <!--            ПН-ПТ: 9:00-22:00<br/>-->
+    <!--            CБ: 9:00-16:00-->
+    <!--        </p>-->
+    <!--    </div>-->
+    <!--    <hr/>-->
     <div class="f_item">
         <h4>АДРЕС</h4>
         <p>
@@ -148,14 +157,14 @@
         </p>
     </div>
     <hr/>
-<!--    <div class="contacts f_item">-->
+    <!--    <div class="contacts f_item">-->
     <div class="form0" id="form0">
         <div class="form-header0">
             <h4>
                 СВЯЖИСЬ С НАМИ
             </h4>
         </div>
-        <form id="contact-form0" novalidate  autocomplete="off">
+        <form id="contact-form0" novalidate autocomplete="off">
             <div class="inputGroup0">
                 <input type="text" id="name0" name="name0" required autocomplete="off">
                 <label for="name0">Имя</label>
@@ -174,7 +183,7 @@
 
             <button type="submit" class="submit_button0" id="submit_button0">Отправить</button>
         </form>
-<!--    </div>-->
+        <!--    </div>-->
     </div>
 </footer>
 <script src="client.js"></script>
