--- a/public/index.html
+++ b/public/index.html
@@ -87,8 +87,7 @@
 <section id="section-2" class="anchor">
     <div class="sim-slider">
         <ul class="sim-slider-list">
-            <li><img src="images/screen.png" alt="screen"></li> <!-- это экран -->
-            <li class="sim-slider-element"><img src="images/DefaultLaba.png" alt="screen"></li>
+            <li class="screen"></li>
         </ul>
         <i class="arrow left"></i>
         <i class="arrow right"></i>
