smaller text size

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </div>
 <header class="header">
     <div class="center_div">
-        <a href="#" class="logo"><h4> Lab402</h4></a>
+        <a href="#" class="logo"><h3> Lab402</h3></a>
         <input class="side-menu" type="checkbox" id="side-menu"/>
         <label class="hamb" for="side-menu">
             <span class="hamb-line"></span>
@@ -24,7 +24,7 @@
             <ul class="menu">
                 <li><p><a href="#section-2" onclick="closeMenu()">Лаборатория</a></p></li>
                 <li><p><a href="#section-3" onclick="closeMenu()">Преподаватели</a></p></li>
-                <li><p><a href="#section-4" onclick="closeMenu()">Статьи</a></p></li>
+                <li><p><a href="#section-4" onclick="closeMenu()">Публикации</a></p></li>
                 <li><p><a href="#cont" onclick="closeMenu()">Контакты</a></p></li>
             </ul>
         </nav>
@@ -58,7 +58,7 @@
             <div class="form" id="form">
                 <div class="form-header">
                     <h3>
-                        Свяжись с нами
+                       НАПИШИ НАМ ПРЯМО СЕЙЧАС
                     </h3>
                 </div>
                 <form id="contact-form" novalidate autocomplete="off">
@@ -108,16 +108,16 @@
 </section>
 <section id="section-4" class="anchor">
     <div class="articles_description">
-        <h2>Статьи</h2>
+        <h2>Публикации</h2>
     </div>
     <div class="articles" id="articles">
     </div>
 </section>
 <footer id="cont" class="anchor">
     <div class="div_logo">
-        <h4>
+        <h3>
             <a href="#" class="logo">Lab402</a>
-        </h4>
+        </h3>
     </div>
     <!--    <hr/>-->
     <!--    <div class="f_item">-->
