--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 
                     <div class="inputGroup">
                         <input type="email" id="email" name="email" required autocomplete="off">
-                        <label for="email">Email</label>
+                        <label for="email" id="em">Email</label>
                     </div>
 
                     <div class="inputGroup">
@@ -170,7 +170,7 @@
             </div>
 
             <div class="inputGroup0">
-                <input type="email" id="email0" name="email0" required autocomplete="off">
+                <input type="email" id="email0" name="email" required autocomplete="off">
                 <label for="email0">Email</label>
             </div>
 
